<resources>
    <string name="app_name">CalculatorApplication</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">edit</string>
    <string name="make">Make</string>
    <string name="FocalLengthUnit">Focal Length [mm]</string>
    <string name="Aperture">Aperture</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>

</resources>
