<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".AddActivity">

    <TextView
    android:textSize="16sp"
    android:text="@string/make"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/make"
        android:hint="ex:Canon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/FocalLengthUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/focalLength"
        android:hint="ex:200 for 200mm"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/Aperture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/aperture"
        android:hint="ex:2.8 for F2.8"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save"
            android:layout_alignParentLeft="true"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/cancel"
            android:layout_alignParentRight="true"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>